Refactor project structure and update for modern Android APIs
- Migrate local `.aar` libraries (`filepicker`, `flexfilter`, `pseudoapksigner`, `tooltips`) to source-based library modules.
- Update target SDK and dependencies to modern versions.
- Improve installation performance by implementing persistent `su` shell sessions and adding IO buffering.
- Add performance logging for installation phases (write speed and system commit duration).
- Implement Android 14 compatibility for foreground services by adding `dataSync` types.
- Replace deprecated `Intent` and `Parcelable` API usage with `IntentCompat`, `BundleCompat`, and `ParcelCompat`.
- Migrate from `startActivityForResult` to the modern `ActivityResultLauncher` API.
- Add `QUERY_ALL_PACKAGES` permission to resolve package visibility issues on Android 11+.
- Modernize build configurations and ProGuard rules for better optimization and R8 compatibility.
- Centralize and optimize IO operations with larger buffer sizes in `IOUtils`.